Split create share service into external and internal version